<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="20dp">


    <TextView
        android:id="@+id/dialogText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/select_the_language_you_want_to_use_in_the_app"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/_16sdp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_50sdp"
        android:orientation="horizontal"
        android:weightSum="3">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button

                android:id="@+id/swedishButton"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimary"
                android:fontFamily="@font/roboto_bold"
                android:padding="2dp"
                android:text="@string/swedish"
                android:textColor="@color/white"
                android:textSize="@dimen/_11sdp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/englishButton"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@color/colorGray"
                android:fontFamily="@font/roboto_bold"
                android:padding="2dp"
                android:text="@string/english"
                android:textColor="@color/white"
                android:textSize="@dimen/_11sdp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/germanButton"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="20dp"
                android:background="@color/colorHeaderGreen"
                android:fontFamily="@font/roboto_bold"
                android:padding="2dp"
                android:text="@string/german"
                android:textColor="@color/white"
                android:textSize="@dimen/_11sdp"
                android:layout_marginStart="@dimen/_20sdp" />
        </RelativeLayout>


    </LinearLayout>


</LinearLayout>