<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_history_menu_bottom"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:padding="10dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
    tools:ignore="MissingPrefix">

    <LinearLayout
        android:id="@+id/llContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@drawable/round_corners_layout_shape"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvGallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/roboto_regular"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/tv_choose_gallery"
            android:textAllCaps="false"
            android:textColor="@color/colorGray"
            android:textSize="@dimen/_10sdp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/colorGrayLightMore"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp" />

        <TextView
            android:id="@+id/tvOpenCamera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/roboto_regular"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/tv_open_camera"
            android:textAllCaps="false"
            android:textColor="@color/colorGray"
            android:textSize="@dimen/_10sdp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corners_layout_shape"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/roboto_regular"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/alert_logout_cancel"
            android:textAllCaps="false"
            android:textColor="@color/colorGray"
            android:textSize="@dimen/_10sdp" />
    </LinearLayout>
</LinearLayout>